After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 778389 - imagefreeze can return erroneous results for an accept caps query
imagefreeze can return erroneous results for an accept caps query
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
1.11.1
Other Mac OS
: Normal normal
: 1.11.2
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-02-09 11:55 UTC by Nick Kallen
Modified: 2017-02-09 12:05 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Remove caps caching code (1015 bytes, patch)
2017-02-09 12:00 UTC, Nick Kallen
committed Details | Review

Description Nick Kallen 2017-02-09 11:55:13 UTC
Description:

videoflip can transform tags, changing width and height. An imagefreeze downstream will receive an ACCEPT_CAPS query but since imagefreeze caches its caps negotiated during a prior phase, it will claim that it cannot accept the new width and height.

The following command exhibits the bug:

gst-launch-1.0 -vm videotestsrc ! taginject tags=image-orientation=rotate-90 ! videoflip video-direction=auto ! imagefreeze ! fakesink
Comment 1 Nick Kallen 2017-02-09 12:00:33 UTC
Created attachment 345303 [details] [review]
Remove caps caching code
Comment 2 Sebastian Dröge (slomo) 2017-02-09 12:05:02 UTC
commit f9e4fae0b334548048e3e95183387aab43d6638f
Author: Nick Kallen <nickkallen@me.com>
Date:   Thu Feb 9 12:55:32 2017 +0100

    imagefreeze: do not cache caps
    
    Upstream elements like videoflip can transform caps, such as changing width and height.
    When an imagefreeze downstream receives an ACCEPT_CAPS query it will NOW return
    all caps that it can accept.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=778389