imagefreeze: do not cache caps

Upstream elements like videoflip can transform caps, such as changing width and height.
When an imagefreeze downstream receives an ACCEPT_CAPS query it will NOW return
all caps that it can accept.

https://bugzilla.gnome.org/show_bug.cgi?id=778389